[package]
name = "bowie-tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.6", features = ["csr"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json"] }
chrono = { version = "0.4", features = ["serde", "wasmbindgen"] }
rexie = "0.5"
console_error_panic_hook = "0.1"
tracing = "0.1"
tracing-wasm = "0.2"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["HtmlInputElement"] }

[dependencies.interzic]
git = "https://github.com/RustyNova016/listenbrainz-cli-tools"
branch = "master"