[package]
name = "bowie-tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.6", features = ["csr"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
rexie = "0.5"
console_error_panic_hook = "0.1"
tracing = "0.1"
tracing-wasm = "0.2"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["HtmlInputElement", "Window", "Storage", "Location"] }
serde-wasm-bindgen = "0.6"
gloo-timers = { version = "0.3", features = ["futures"] }
regex = "1.12.2"
wasm-bindgen-futures = "0.4.56"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.48.0", features = ["full"] }

[profile.release]
# Optimize for small binary size and speed
opt-level = 's'
lto = "thin"
codegen-units = 1
panic = "abort"

[profile.wasm-release]
inherits = "release"
wasm-opt = true # Trunk handles this automatically if wasm-opt is found
